@@ -76,7 +76,7 @@ org.opennms.snmp.snmp4j.forwardRuntimeExceptions=false
 
 # By default, SNMP4J does not do any logging internally, but it's easy to
 # enable.  See log4j.properties to adjust log levels for these messages.
-snmp4j.LogFactory=org.snmp4j.log.Log4jLogFactory
+snmp4j.LogFactory=org.opennms.netmgt.snmp.snmp4j.Slf4jLogFactory
 
 # Net-SNMP agents prior to release 5.4.1 on 64-bit platforms exhibit a bug
 # that causes the discovery of a node's interfaces to fail. A workaround has
